Bug 269184 - KMM Seg Faults after editing payee
Summary: KMM Seg Faults after editing payee
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-22 22:22 UTC by Michael T. Garrison Stuber
Modified: 2011-05-28 18:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.46 KB, text/plain)
2011-03-22 22:57 UTC, Michael T. Garrison Stuber
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael T. Garrison Stuber 2011-03-22 22:22:54 UTC
Application: kmymoney (4.5.3)
KDE Platform Version: 4.4.5 (KDE 4.4.5)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-28-generic i686
Distribution: Ubuntu 10.04.1 LTS

-- Information about the crash:
When I go into the payee screen and edit a payee, KMM crashes when changes are applied.  This happens consistently on my dataset when I change a payee name.  I've also had it occur when adding new matches to the payee, or consolidating multiple payees to a single payee.

The crash can be reproduced every time.

 -- Backtrace:
Application: KMyMoney (kmymoney), signal: Segmentation fault
[KCrash Handler]
#6  0x04892993 in QListModeViewBase::scrollContentsBy (this=0x8de7798, dx=0, dy=1271, scrollElasticBand=false) at itemviews/qlistview.cpp:2168
#7  0x04891ba7 in QListView::scrollContentsBy (this=0x8de45e8, dx=0, dy=1271) at itemviews/qlistview.cpp:705
#8  0x047c9d65 in QAbstractScrollAreaPrivate::_q_vslide (this=0x8de4608, y=0) at widgets/qabstractscrollarea.cpp:1310
#9  0x047cb3d2 in QAbstractScrollArea::qt_metacall (this=0x8de45e8, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbf96ff08) at .moc/release-shared/moc_qabstractscrollarea.cpp:85
#10 0x0487948a in QAbstractItemView::qt_metacall (this=0x8de45e8, _c=QMetaObject::InvokeMetaMethod, _id=29, _a=0xbf96ff08) at .moc/release-shared/moc_qabstractitemview.cpp:213
#11 0x04a08c3a in QListView::qt_metacall (this=0x8de45e8, _c=QMetaObject::InvokeMetaMethod, _id=29, _a=0xbf96ff08) at .moc/release-shared/moc_qlistview.cpp:111
#12 0x048e889a in QListWidget::qt_metacall (this=0x8de45e8, _c=QMetaObject::InvokeMetaMethod, _id=29, _a=0xbf96ff08) at .moc/release-shared/moc_qlistwidget.cpp:123
#13 0x0053243a in KListWidget::qt_metacall (this=0x8de45e8, _c=QMetaObject::InvokeMetaMethod, _id=29, _a=0xbf96ff08) at ./klistwidget.moc:80
#14 0x067edc9a in QMetaObject::metacall (object=0x8de45e8, cl=172405856, idx=29, argv=0xbf96ff08) at kernel/qmetaobject.cpp:237
#15 0x067fc3d5 in QMetaObject::activate (sender=0x8de54f8, m=0x4c109f4, local_signal_index=0, argv=0xbf96ff08) at kernel/qobject.cpp:3293
#16 0x04a00be3 in QAbstractSlider::valueChanged (this=0x8de54f8, _t1=0) at .moc/release-shared/moc_qabstractslider.cpp:182
#17 0x046e30e7 in QAbstractSlider::setValue (this=0x8de54f8, value=0) at widgets/qabstractslider.cpp:542
#18 0x046e3acc in QAbstractSlider::setRange (this=0x8de54f8, min=0, max=-1) at widgets/qabstractslider.cpp:251
#19 0x048958b2 in QListModeViewBase::updateVerticalScrollBar (this=0x8de7798, step=...) at itemviews/qlistview.cpp:2021
#20 0x0489fd58 in QListView::updateGeometries (this=0x8de45e8) at itemviews/qlistview.cpp:1484
#21 0x0486f6b3 in QAbstractItemView::doItemsLayout (this=0x8de45e8) at itemviews/qabstractitemview.cpp:1135
#22 0x04893519 in QListView::doItemsLayout (this=0x8de45e8) at itemviews/qlistview.cpp:1466
#23 0x0489a523 in QAbstractItemViewPrivate::executePostedLayout (this=0x8de45e8, index=...) at ../../include/QtGui/private/../../../src/gui/itemviews/qabstractitemview_p.h:212
#24 QListViewPrivate::rectForIndex (this=0x8de45e8, index=...) at ../../include/QtGui/private/../../../src/gui/itemviews/qlistview_p.h:344
#25 QListView::rectForIndex (this=0x8de45e8, index=...) at itemviews/qlistview.cpp:1226
#26 0x0489a63c in QListView::visualRect (this=0x8de45e8, index=...) at itemviews/qlistview.cpp:561
#27 0x0489a2d8 in QListView::scrollTo (this=0x8de45e8, index=..., hint=QAbstractItemView::EnsureVisible) at itemviews/qlistview.cpp:574
#28 0x048e5e54 in QListWidget::scrollToItem (this=0x8de45e8, item=0xa38e380, hint=QAbstractItemView::EnsureVisible) at itemviews/qlistwidget.cpp:1740
#29 0x00533268 in KListWidgetSearchLine::updateSearch (this=0x8ea0f70, s=...) at ../../kdeui/itemviews/klistwidgetsearchline.cpp:119
#30 0x08115fd3 in KPayeesView::loadPayees (this=0x8de2c98) at /home/mtgs/Development/kmymoney-4.5.3/kmymoney/views/kpayeesview.cpp:706
#31 0x0811649b in KPayeesView::qt_metacall (this=0x8de2c98, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbf9704cc) at /home/mtgs/Development/kmymoney-4.5.3/build/kmymoney/views/kpayeesview.moc:118
#32 0x067edc9a in QMetaObject::metacall (object=0x8de2c98, cl=172405856, idx=33, argv=0xbf9704cc) at kernel/qmetaobject.cpp:237
#33 0x067fc3d5 in QMetaObject::activate (sender=0x221aac, m=0x220bcc, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3293
#34 0x001b22c7 in MyMoneyFile::dataChanged (this=0x221aac) at /home/mtgs/Development/kmymoney-4.5.3/build/kmymoney/mymoney/mymoneyfile.moc:83
#35 0x001b67eb in MyMoneyFile::commitTransaction (this=0x221aac) at /home/mtgs/Development/kmymoney-4.5.3/kmymoney/mymoney/mymoneyfile.cpp:178
#36 0x001b682d in MyMoneyFileTransaction::commit (this=0xbf97064e) at /home/mtgs/Development/kmymoney-4.5.3/kmymoney/mymoney/mymoneyfile.cpp:2457
#37 0x08112444 in KPayeesView::slotRenamePayee (this=0x8de2c98, p=0xa393af0) at /home/mtgs/Development/kmymoney-4.5.3/kmymoney/views/kpayeesview.cpp:323
#38 0x08116527 in KPayeesView::qt_metacall (this=0x8de2c98, _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0xbf970798) at /home/mtgs/Development/kmymoney-4.5.3/build/kmymoney/views/kpayeesview.moc:125
#39 0x067edc9a in QMetaObject::metacall (object=0x8de2c98, cl=172405856, idx=40, argv=0xbf970798) at kernel/qmetaobject.cpp:237
#40 0x067fc3d5 in QMetaObject::activate (sender=0x8de45e8, m=0x4c0afc8, local_signal_index=5, argv=0xbf970798) at kernel/qobject.cpp:3293
#41 0x048e3cd3 in QListWidget::itemChanged (this=0x8de45e8, _t1=0xa393af0) at .moc/release-shared/moc_qlistwidget.cpp:226
#42 0x048e5a8e in QListWidgetPrivate::_q_emitItemChanged (this=0x8de4608, index=...) at itemviews/qlistwidget.cpp:1103
#43 0x048e8b84 in QListWidget::qt_metacall (this=0x8de45e8, _c=QMetaObject::InvokeMetaMethod, _id=18, _a=0xbf970924) at .moc/release-shared/moc_qlistwidget.cpp:146
#44 0x0053243a in KListWidget::qt_metacall (this=0x8de45e8, _c=QMetaObject::InvokeMetaMethod, _id=88, _a=0xbf970924) at ./klistwidget.moc:80
#45 0x067edc9a in QMetaObject::metacall (object=0x8de45e8, cl=172405856, idx=88, argv=0xbf970924) at kernel/qmetaobject.cpp:237
#46 0x067fc3d5 in QMetaObject::activate (sender=0x8de77e8, m=0x68fc198, local_signal_index=0, argv=0xbf970924) at kernel/qobject.cpp:3293
#47 0x0684ce29 in QAbstractItemModel::dataChanged (this=0x8de77e8, _t1=..., _t2=...) at .moc/release-shared/moc_qabstractitemmodel.cpp:148
#48 0x048e47a6 in QListModel::itemChanged (this=0x8de77e8, item=0xa393af0) at itemviews/qlistwidget.cpp:410
#49 0x048e4910 in QListWidgetItem::setData (this=0xa393af0, role=<value optimized out>, value=...) at itemviews/qlistwidget.cpp:701
#50 0x048e37fe in QListModel::setData (this=0x8de77e8, index=..., value=..., role=2) at itemviews/qlistwidget.cpp:228
#51 0x0492fdb8 in QStyledItemDelegate::setModelData (this=0x8de76c8, editor=0xad15a18, model=0x8de77e8, index=...) at itemviews/qstyleditemdelegate.cpp:538
#52 0x0487f1fc in QAbstractItemView::commitData (this=0x8de45e8, editor=0xad15a18) at itemviews/qabstractitemview.cpp:2705
#53 0x048797bb in QAbstractItemView::qt_metacall (this=0x8de45e8, _c=QMetaObject::InvokeMetaMethod, _id=29, _a=0xbf970cd8) at .moc/release-shared/moc_qabstractitemview.cpp:247
#54 0x04a08c3a in QListView::qt_metacall (this=0x8de45e8, _c=QMetaObject::InvokeMetaMethod, _id=60, _a=0xbf970cd8) at .moc/release-shared/moc_qlistview.cpp:111
#55 0x048e889a in QListWidget::qt_metacall (this=0x8de45e8, _c=QMetaObject::InvokeMetaMethod, _id=60, _a=0xbf970cd8) at .moc/release-shared/moc_qlistwidget.cpp:123
#56 0x0053243a in KListWidget::qt_metacall (this=0x8de45e8, _c=QMetaObject::InvokeMetaMethod, _id=60, _a=0xbf970cd8) at ./klistwidget.moc:80
#57 0x067edc9a in QMetaObject::metacall (object=0x8de45e8, cl=172405856, idx=60, argv=0xbf970cd8) at kernel/qmetaobject.cpp:237
#58 0x067fc3d5 in QMetaObject::activate (sender=0x8de76c8, m=0x4c13d48, local_signal_index=0, argv=0xbf970cd8) at kernel/qobject.cpp:3293
#59 0x04a09063 in QAbstractItemDelegate::commitData (this=0x8de76c8, _t1=0xad15a18) at .moc/release-shared/moc_qabstractitemdelegate.cpp:102
#60 0x0492e132 in QStyledItemDelegate::eventFilter (this=0x8de76c8, object=0xad15a18, event=0xbf9711a0) at itemviews/qstyleditemdelegate.cpp:691
#61 0x067e7cda in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x894c418, receiver=0xad15a18, event=0xbf9711a0) at kernel/qcoreapplication.cpp:819
#62 0x042d54b9 in QApplicationPrivate::notify_helper (this=0x894c418, receiver=0xad15a18, e=0xbf9711a0) at kernel/qapplication.cpp:4296
#63 0x042dc0f9 in QApplication::notify (this=0x894c388, receiver=0xad15a18, e=0xbf9711a0) at kernel/qapplication.cpp:4265
#64 0x0056040a in KApplication::notify (this=0x894c388, receiver=0xad15a18, event=0xbf9711a0) at ../../kdeui/kernel/kapplication.cpp:302
#65 0x067e8a3b in QCoreApplication::notifyInternal (this=0x894c388, receiver=0xad15a18, event=0xbf9711a0) at kernel/qcoreapplication.cpp:704
#66 0x042dac01 in QCoreApplication::sendEvent (focus=0x8de45e8, reason=Qt::MouseFocusReason) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#67 QApplicationPrivate::setFocusWidget (focus=0x8de45e8, reason=Qt::MouseFocusReason) at kernel/qapplication.cpp:2122
#68 0x0432e705 in QWidget::setFocus (this=0x8de45e8, reason=Qt::MouseFocusReason) at kernel/qwidget.cpp:6135
#69 0x042d7baf in QApplicationPrivate::giveFocusAccordingToFocusPolicy (widget=0x8de45e8, focusPolicy=Qt::ClickFocus, focusReason=Qt::MouseFocusReason) at kernel/qapplication.cpp:5315
#70 0x042ddda3 in QApplication::notify (this=0x894c388, receiver=0x8de4948, e=0xbf9716b0) at kernel/qapplication.cpp:3822
#71 0x0056040a in KApplication::notify (this=0x894c388, receiver=0x8de4948, event=0xbf9716b0) at ../../kdeui/kernel/kapplication.cpp:302
#72 0x067e8a3b in QCoreApplication::notifyInternal (this=0x894c388, receiver=0x8de4948, event=0xbf9716b0) at kernel/qcoreapplication.cpp:704
#73 0x042db952 in QCoreApplication::sendEvent (receiver=0x8de4948, event=0xbf9716b0, alienWidget=0x8de4948, nativeWidget=0x8de2c98, buttonDown=0x4c19058, lastMouseReceiver=..., spontaneous=true)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#74 QApplicationPrivate::sendMouseEvent (receiver=0x8de4948, event=0xbf9716b0, alienWidget=0x8de4948, nativeWidget=0x8de2c98, buttonDown=0x4c19058, lastMouseReceiver=..., spontaneous=true)
    at kernel/qapplication.cpp:2965
#75 0x04367088 in QETWidget::translateMouseEvent (this=0x8de2c98, event=0xbf971bcc) at kernel/qapplication_x11.cpp:4368
#76 0x04366511 in QApplication::x11ProcessEvent (this=0x894c388, event=0xbf971bcc) at kernel/qapplication_x11.cpp:3379
#77 0x0439560a in x11EventSourceDispatch (s=0x894f640, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#78 0x060965e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#79 0x0609a2d8 in ?? () from /lib/libglib-2.0.so.0
#80 0x0609a4b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#81 0x068145d5 in QEventDispatcherGlib::processEvents (this=0x89329e0, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#82 0x04395135 in QGuiEventDispatcherGlib::processEvents (this=0x89329e0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#83 0x067e7059 in QEventLoop::processEvents (this=0xbf971ec4, flags=) at kernel/qeventloop.cpp:149
#84 0x067e74aa in QEventLoop::exec (this=0xbf971ec4, flags=...) at kernel/qeventloop.cpp:201
#85 0x067eb69f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#86 0x042d5577 in QApplication::exec () at kernel/qapplication.cpp:3579
#87 0x0808b5d7 in main (argc=1, argv=0xbf972354) at /home/mtgs/Development/kmymoney-4.5.3/kmymoney/main.cpp:260

Possible duplicates by query: bug 234570.

Reported using DrKonqi
Comment 1 Michael T. Garrison Stuber 2011-03-22 22:57:40 UTC
Created attachment 58264 [details]
New crash information added by DrKonqi

This time, KMM didn't crash immediately after editing payees, instead it crashed after doing a new search on the payee list.  Perhaps the payee object isn't being updated correctly such that iterating over the list can cause a seg fault after the payee has been updated?
Comment 2 Thomas Baumgart 2011-04-24 20:02:22 UTC
I was able to duplicate the problem as follows consistently:

a) open payees view
b) select a payee
c) type 4-5 chars in the search bar in such a way that the selected payee is not in the resulting set

This happened in the following environment using KMyMoney trunk:

Qt: 4.6.1
KDE: 4.3.5 (KDE 4.3.5) "release 2"

I was unable to duplicate the problem using the same file in the following environment:

Qt: 4.7.1
KDE Development Platform: 4.6.00 (4.6.0) "release 6"
Comment 3 Thomas Baumgart 2011-05-28 18:19:56 UTC
SVN commit 1233919 by tbaumgart:

Clear search widget before using after update

BUG: 269184

 M  +2 -2      kpayeesview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1233919