Clear search widget before using after update

BUG: 269184

svn path=/trunk/extragear/office/kmymoney/; revision=1233919